style fix mobile

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <title>WebGuardian</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/stylesheets/Style.css">
-    <link rel="stylesheet" href="/stylesheets/loader.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/stylesheets/Style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/stylesheets/loader.css">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/stylesheets/PC.css" media="screen and (min-width:766px)">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/stylesheets/mobile.css" media="screen and (max-width:765px)">
+    
 </head>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/gh/LYA0728/WebGuardian/public/javascripts/chatHistory.js"></script>
 
 <body>
 
@@ -72,7 +77,7 @@
 
 </body>
 
-<script src="/javascripts/chatHistory.js"></script>
+
 
 <script>
     // 请求状态监听
